# llm_call

./: .dockerignore  .env.bak  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT_20250616.md  COMPREHENSIVE_LLM_CALL_ANALYSIS.md  Dockerfile  IMPORT_FIX_SUMMARY.md  LLM_CALL_ANALYSIS_FOR_GEMINI.md  PURPOSE.md  README.md  README_update.md  V4_ASYNC_ITERATION_SUMMARY.md  VERIFICATION_FILES_EXPLANATION.md  ask_gemini_critique.py  ask_gemini_simple.py  bg_verify.py  claude_code_assessment.md  clean_json.py  clean_stuck_tasks.py  create_verification_json.py  debug_test2.py  debug_test_by_test.py  debug_vertex_simple.py  direct_vertex_call.py  docker-compose.full.yml  docker-compose.simple.yml  docker-compose.yml  extract_json_array.py  final_report.md  fix_async_params.py  fix_json.py  fix_model_response_serialization.py  fix_router_provider_key.py  gemini_critique_litellm.py  launch_verification.py  llm_polling_tasks.db  poll_verification.py  (+55 more)
.claude/advanced-commands/: call.md  config_example.md  list_models.md  list_validators.md  validate.md
.claude/commands/: ask.md  chat.md  generate_claude.md  generate_mcp_config.md  models.md  serve_mcp.md
.claude/example-commands/: analyze.md  convert.md
.claude/llm-commands/: llm-enhance-qa.md  llm-model-router.md  llm-process-for-module.md  llm-receive-from.md  llm-register.md  llm-send-to.md  llm_call.md  llm_call_multimodal.md  serve.md  terminal_commands.md  test.md
.custom/commands/: add.md  hello.md
config/: claude_proxy.yaml
config/examples/: corpus_analysis.yaml
docker/api/: Dockerfile  Dockerfile.enhanced  entrypoint.sh  requirements.txt
docker/claude-proxy/: .bashrc  .zshrc  AUTHENTICATION.md  Dockerfile  Dockerfile.fixed  Dockerfile.v2  README.md  authenticate.sh  docker-compose.yml  entrypoint.fixed.sh  entrypoint.sh  requirements.txt  test_claude.sh
docs/: 004_Tasks_Test_Prompts_Validation.md  2025_STYLE_GUIDE_IMPROVEMENTS.md  ARANGODB_TEST.md  ASYNC_IMPROVEMENTS.md  CLAUDE_CLI_DOCKER_SETUP.md  CLAUDE_STREAMING.md  CLI_CONFIG_SCHEMA.md  COMPLETE_FEATURE_CHECKLIST.md  DOCKER_ARCHITECTURE_PROPOSAL.md  DOCKER_SECURITY.md  DOCKER_SETUP_GUIDE.md  IMPROVEMENTS_IMPLEMENTED.md  INTEGRATION_GUIDE_FOR_HUB.md  LOCAL_DOCKER_SETUP_GUIDE.md  MCP_SERVER_README.md  MODULE_COMMUNICATION_SHELL_EXECUTION.md  MULTIMODAL_USAGE_GUIDE.md  POC_REQUIREMENTS_ADDITION.md  POC_SUCCESS_STORY_ASYNC_POLLING.md  POLLING_DAEMON.md  README.md  SLASH_COMMAND_SETUP.md  SOLUTION_SUMMARY.md  SQLITE_BM25_SEARCH.md  STREAMING.md  STREAMING_MODULE_QUERY.md  TASK_LIST_TEMPLATE_GUIDE.md  TASK_LIST_TEMPLATE_GUIDE.md.backup  TASK_LIST_TEMPLATE_USAGE_FUNCTIONS_VERIFIED.md  UNIFIED_CLI_SOLUTION.md  USAGE_FUNCTIONS_SIMPLE_GUIDE.md  V4_COMPLETION_ACTION_PLAN.md  poc_retry_implementation_summary.md  prompt_scratch.md  task_1_revised_example.md  task_improvements_analysis.md  task_list_improvements_summary.md
docs/00_quick_start/: MCP_SERVER_README.md  README.md
docs/03_guides/: README.md  RENAMING_PROJECTS.md  RUNPOD_INTEGRATION.md  SUMMARIZATION.md
docs/05_development/: README.md
docs/06_reports/: README.md
docs/07_transcripts/: claude_code_plan_mode.md
docs/99_tasks/: README.md
docs/clarifying_questions/: 016_V4_Claude_Validator.md
docs/correspodence/: claude_desktop_cc_usage_function_response.md  failing_mcps_perplexity.md  lucide_problems_perplexity.md  missing_features.md  natrium_project.md  progress_indicator_answer.md  tmux_claude_pool_perplexity.md
docs/correspondence/: gemini_slash_command_critique.md  perplexity_slash_command_critique.md  simplification_feedback.md
docs/prompts/: gemini_task_plan.md
docs/reports/: 001_task_2_4_instance_pooling.md  001_task_2_5_conversation_management.md  003_task_4_integration_notes.md  003_task_4_polling_integration.md  003_task_4_status_polling.md  004_task_2_json_validation_implementation.md  004_task_3_multimodal_image_handling.md  004_task_4_agent_based_validation.md  004_task_6_retry_escalation_logic.md  004_task_7_integration_testing_suite.md  004_task_8_final_verification.md  007_litellm_core_refactor_complete.md  008_task_1_staged_retry_manager.md  008_task_2_ai_validator_base.md  009_v2_implementation_evaluation.md  016_v4_implementation_complete.md  017_current_status.md  017_task_10_completion_matrix.md  017_task_1_simple_question.md  100_percent_success_report.md  CLI_TEST_REPORT.md  FINAL_TEST_VERIFICATION_REPORT.md  PROVIDER_VERIFICATION_REPORT.md  ai_validator_research_findings.md  async_sqlite_polling_implementation.md  bare_except_report_20250610_085523.md  bug_fix_report_20250605.md  claude_proxy_status.md  config_validation_fix_report.md  daily_verification_20250605.md  daily_verification_20250605_v2.md  final_test_fixes_20250605.md  fix_bare_excepts.py  (+155 more)
examples/: example_config.json  runpod_example.py  synchronous_api.py  test_summarization.py  usage_openai_basic.py
logs/: claude_polling.db  conversations.db  llm_polling_tasks.db
scripts/: check_project_setup.py  code_review.md  fix_bare_excepts_final.py  fix_bare_excepts_only.py  install_claude_aliases.sh  organize_docs_to_archive.py  project_cleanup.py  run_comprehensive_tests.py  test_imports.py  test_report_engine.py  verify_tests.py
src/: granger_security_middleware_simple.py
tasks/: fix_verification_dashboard_task.md
test_reports/: claude_max_proxy_report.md
tests/: FINAL_STATUS_REPORT.md  ITERATIVE_TEST_PLAN.md  MOCKING_ANALYSIS.md  README.md  TESTING_STATUS.md  TEST_ANALYSIS_REPORT.md  TEST_STRUCTURE.md  __init__.py  conftest.py  run_tests_with_report.py  run_verification_tests.py  test_basic.py  test_core_integration.py  test_honeypot.py  test_llm_call_simple.py  test_llm_final_status_report.md  test_llm_status_report.md  test_minimum_viable.py  test_providers_direct.py  test_simple_openai.py  verify_environment.py
verification-app/: index.html  package-lock.json  package.json  tailwind.config.js
verification_experiments/: CLAUDE_CODE_CRITICAL_ASSESSMENT.md  CLAUDE_CODE_VERIFICATION_RESULTS.md  comprehensive_verification_test.py  proper_verification.md  proper_verification.py
(+506 files in other folders)
